# mstp-artifacts-usenix

./: README.md  flake.nix
copilot/: README.md  copilot.sh
copilot/tfm-configs/: nucleo_l552ze_q-bare-config.cmake  nucleo_l552ze_q-crypto-config.cmake  nucleo_l552ze_q-mstp-config.cmake
evaluation/: README.md
evaluation/graphs/: 1-draw-graphs.sh
evaluation/graphs/patterns/: 06-cache.txt  06-contention.txt  06-div.txt  06-inst_diff.txt  06-shift_template.txt  06-sub_template.txt
evaluation/graphs/scripts/: gen_matrix.py  gen_template_matrix.py  pattern_matrix_docs.md
evaluation/mstp_metrics/: output.txt
m-step/: CMakeLists.txt  README.md
m-step/Drivers/CMSIS/Device/Include/: stm32l5xx.h
m-step/mstp-debug/gdb-py/: 1-gdb-py.sh  flake.nix
m-step/mstp-debug/gdb-py/scripts/: single-step.py  trace_lookup.py
m-step/mstp-debug/gdb-py/setups/: exp-m-step-eval-tfm.gdbinit  exp-single-step-tz-baremetal.gdbinit
m-step/mstp-debug/gdb-py/setups/common/: common.gdbinit
m-step/mstp-debug/openocd/: 1-openocd.sh
m-step/mstp-debug/renode/: 1-renode.sh  shell.nix
m-step/mstp-debug/renode/boards/: stm32l552.repl
m-step/mstp-debug/renode/setups/: l552_exp-m-step-eval-tfm.resc  l552_exp-single-step-tz-baremetal.resc
m-step/mstp-debug/renode/src/renode/: .gitmodules
m-step/mstp-eval/inc/: armv8_decop_lib.h  mstp_eval.h  mstp_eval_setup.h  mstp_eval_tests.h  uArchChannel_lib.h
m-step/mstp-eval/src/: armv8_decop_lib.c  i_cache_buffer_ns.s  mstp_eval.c  mstp_eval_setup.c  mstp_eval_test1.c  mstp_eval_test2.c
m-step/mstp-poc/inc/: mstp_poc.h  mstp_poc_setup.h
m-step/mstp-poc/poc-001/inc/: poc_001.h
m-step/mstp-poc/poc-001/src/: poc_001.c
m-step/mstp-poc/src/: mstp_poc.c  mstp_poc_setup.c
m-step/mstp-victims/TAs/PRoT_crypto_attack/: CMakeLists.txt  PRoT_crypto_attack.c  PRoT_crypto_attack.yaml  PRoT_crypto_attack_manifest_list.yaml
m-step/mstp-victims/TAs/appRoT/: CMakeLists.txt  appRoT.c  appRoT.yaml  appRoT_manifest_list.yaml
m-step/mstp-victims/TAs/covert/: CMakeLists.txt  covert.c  covert.yaml
m-step/mstp-victims/TAs/covert/covert_src/: board.h  cache_lines_function.s  covert.h
m-step/mstp-victims/TAs/covert/uArchChannel_lib/: board.h  i_cache_buffer.s  uArchChannel_lib.h
m-step/mstp-victims/TAs/keypad/: CMakeLists.txt  keypad.yaml
m-step/mstp-victims/TAs/keypad/Inc/: gpio.h  keypad.h  main.h
m-step/mstp-victims/TAs/keypad/Src/: gpio.c  keypad.c  main.c
m-step/mstp-victims/ns/: CMakeLists.txt
m-step/mstp-victims/ns/inc/: victims.h
m-step/mstp-victims/ns/src/: victims.c  victims.s
m-step/mstp-victims/s/: CMakeLists.txt
m-step/mstp-victims/s/inc/: victims.h
m-step/mstp-victims/s/src/: victims.c  victims.s
m-step/mstp-visualizer/: .gitignore  1-gen-vcd.sh  2-gtkwave.sh  3-analyze-trace.sh
m-step/mstp-visualizer/gtkw_confs/: trace_visualization.gtkw
m-step/mstp-visualizer/patterns/: pattern-cmp-inv-mod-end.txt  pattern-cmp-inv-mod-start.txt  pattern-cmp-inv-mod-visualization.txt  patterns-cmp-inv-mod.txt  patterns-shifts-inv-mod-visualization.txt  patterns-shifts-inv-mod.txt  saved_keys.txt  test_matrix.txt
m-step/mstp-visualizer/scripts/: find-patterns.py  gen-vcd.py  get-shifts-subs.py  numerate-trace.py  pattern-cmp-inv-mod-visualization_matrix.txt  patterns-shifts-inv-mod-visualization_matrix.txt  prune-trace.py  recover-keys-inv-mod.py
m-step/mstp/inc/: main.h  mstp.h  mstp_defs.h  mstp_metrics.h  stm32l5xx_hal_conf.h  tim.h
m-step/mstp/src/: mstp.c  mstp.s  mstp_metrics.c  tim.c
m-step/traces/mbedtls-mpi-cmp-profile-001/: trace.txt
m-step/traces/tfm-inv-mod-001/: tfm_s.elf
m-step/traces/tfm-inv-mod-rsa-001/: tfm_s.elf
m-step/traces/tfm-rsa-dec-001/: tfm_ns.elf  tfm_s.elf
ns-world-bare/: 2-deploy.sh  README.md
ns-world-bare/src/NonSecure/: CMakeLists.txt
ns-world-bare/src/NonSecure/Core/Src/: main.c
ns-world-bare/src/NonSecure/Core/Startup/: startup_stm32l552xx.s
ns-world-bare/src/Secure/: CMakeLists.txt
ns-world-bare/src/Secure/Core/Src/: secure_nsc.c
ns-world-rtos/: 0-config.sh  1-compile.sh  2-deploy.sh  CMakeLists.txt  README.md  test_app.c
ns-world-rtos/single-stepping/Drivers/CMSIS/Device/Include/: stm32l552xx.h
ns-world-rtos/single-stepping/inc/: single-step.h  victims.h
ns-world-rtos/single-stepping/src/: icache.c  single-step.c  tim.c  victims.c
s-world/: README.md
s-world/patches/: 001-tfm-toolchain-Os.patch
s-world/tf-m-tests/app_broker/: main_ns.c
s-world/trusted-firmware-m/: toolchain_GNUARM.cmake
s-world/trusted-firmware-m/bl2/ext/mcuboot/: CMakeLists.txt  bl2_main.c
s-world/trusted-firmware-m/interface/include/: tfm_veneers.h
s-world/trusted-firmware-m/interface/src/os_wrapper/: tfm_ns_interface_rtos.c
s-world/trusted-firmware-m/secure_fw/partitions/initial_attestation/: tfm_attest_req_mngr.c
s-world/trusted-firmware-m/secure_fw/partitions/ns_agent_tz/: CMakeLists.txt  mstp_veneers.c
s-world/trusted-firmware-m/secure_fw/spm/: CMakeLists.txt
s-world/trusted-firmware-m/secure_fw/spm/core/: main.c
